--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,8 @@ body{
 }
 .mobileview {
   background-color: #7b5620;
-  width: 100%;
-  height: 100%;
-  max-width: 430px;
-  min-height: 560px;
+  width: 428px;
+  height: 720px;
   overflow: auto;
   font-family: "Roboto", sans-serif;
 }
